# xfce4-applemenu-plugin

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  DOCUMENT.md  LICENSE  README.md  install.sh  meson.build  meson_options.txt
.github/: FUNDING.yml
data/: meson.build
data/icons/: meson.build
debian/: changelog  control  copyright  rules  watch  xfce4-applemenu-plugin.docs  xfce4-applemenu-plugin.install  xfce4-applemenu-plugin.postinst  xfce4-applemenu-plugin.postrm
po/: POTFILES  en.po  meson.build
src/: applemenu.c  applemenu.desktop.in  applemenu.h  meson.build
